Using vh to avoid background images jumping on mobile devices when the address bar shows/hides (http://stackoverflow.com/a/25020295)

--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,7 @@ a:focus {
 .intro {
     display: table;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     padding: 100px 0;
     text-align: center;
     color: #fff;
@@ -362,7 +362,7 @@ body {
   display: table;
   width: 100%;
   height: 600px;
-  max-height: 70%;
+  max-height: 70vh;
   text-align: center;
   color: #fff;
   text-shadow: black 2px 2px 10px;
